delete mockup data

--- a/src/index.html
+++ b/src/index.html
@@ -95,11 +95,11 @@
         var current_votes = {}
 
         // mock data
-        current_votes["01326"] = 131
+        /* current_votes["01326"] = 131
         current_votes[12223] = 503
         current_votes["04501"] = 365
         current_votes[11619] = 480
-
+ */
         function resetHighlight(e) {
             geojson.resetStyle(e.target);
         }
